src-errormsg/E04-DivisionOnIntegers/Plutarch.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg/E04-DivisionOnIntegers/Plutarch.hs:35:30: error: [GHC-39999]
    • No instance for ‘Fractional (Term s PInteger)’
        arising from a use of ‘/’
    • In the expression: pfromData n / 2
      In a case alternative: PAmount n -> pfromData n / 2
      In the expression:
        case w of
          PAmount n -> pfromData n / 2
          PJoint x y -> (self # pfromData x) + (self # pfromData y)
          PDeduct n from -> (self # pfromData from) - pfromData n
   |
35 |     PAmount n -> pfromData n / 2
   |                              ^
